--- a/metadata.yaml
+++ b/metadata.yaml
@@ -6,6 +6,7 @@ author:
 - Author Two
 description: Tools for cleaning up your system and freeing up space, especially for developers.
 summary: Tools for cleaning up your system and freeing up space, especially for developers.
+image: https://freespace.tdhopper.com/image.jpg
 keywords:
 - git
 - conda
